# Kaydee-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  KaydeeConfig.h.in  README.md  premake5.lua  run.sh  util.sh
Engine/: CMakeLists.txt
Engine/include/Kaydee/: Kaydee.h
Engine/src/: kdpch.h
Engine/src/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.cpp  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Timestep.cpp  Timestep.h  Window.h
Engine/src/Debug/: CMakeLists.txt  Instrumentor.h
Engine/src/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/ImGui/: CMakeLists.txt  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Scene/: CMakeLists.txt  Components.h  Entity.cpp  Entity.h  README.md  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Engine/src/Utils/: rng.h
Kaydee/: CMakeLists.txt  premake5.lua
Kaydee-Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  KaydeeEditorApp.cpp
Kaydee-Editor/assets/shaders/: flatColor.glsl
Kaydee-Editor/src/: CMakeLists.txt
Kaydee-Editor/src/Panels/: CMakeLists.txt  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Kaydee/src/: Kaydee.h
Kaydee/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp
Kaydee/src/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
Kaydee/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/assets/shaders/: texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
scripts/dev/: cmake.sh  help.sh
tools/development_scripts/: cmake.sh
